# worksheet-generator

./: .gitignore  LICENSE  README.md
front_end/: button.js  index.html  style.css
wap_back_end/: main.py  pyproject.toml
wap_back_end/examples/: example_json_input.json  example_json_output.json
wap_back_end/schema/: worksheet_input_schema.json
wap_back_end/wap/answer_checker/: answer_checker.py
wap_back_end/wap/chatgpt_api/: api.py
wap_back_end/wap/domain/: model.py
