[tool.poetry]
name = "wap"
version = "0.1.0"
description = ""
authors = ["Fabian Schomerus <97347781+fabayoun@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.2"
Flask = "^2.2.2"
Flask-Cors = "^3.0.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.10.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
