[tool.poetry]
name = "wap"
version = "0.1.0"
description = ""
authors = ["Fabian Schomerus <97347781+fabayoun@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.2"
openai = "^0.26.1"
python-dotenv = "^0.21.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
